[package]
name = "edit-distance"
version = "2.1.0"
authors = ["Florian Ebeling <florian.ebeling@gmail.com>"]

description = "Levenshtein edit distance between strings, a measure for similarity."
repository = "https://github.com/febeling/edit-distance"
documentation = "http://febeling.github.io/edit-distance/edit_distance/"
readme = "README.md"
keywords = ["text-processing", "search", "spelling"]

license = "Apache-2.0"

[dev-dependencies]
quickcheck = "^0"
